# CMake_usage

./: CMakeLists.txt  README.md  check_res.py  my_cpp_lib.cp311-win_amd64.pyd
src/: cpp_module.cpp
